src/types/snapshots/treetop_core__types__action__tests__assert_action_serialization__action_with_multiple_namespaces.snap
---
source: src/types/action.rs
expression: serialized
---
{
  "id": "test_action",
  "namespace": [
    "namespace1",
    "namespace2"
  ]
}
