src/types/snapshots/treetop_core__types__action__tests__assert_action_serialization__action_with_namespace-2.snap
---
source: src/types/action.rs
expression: action.cedar_id()
---
namespace1::Action::"test_action"
